# bitcoin-academy

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  cspell.json  docker-compose.yml  package.json  start-dev.sh
.github/: WORKFLOWS.md
.github/workflows/: backend.yml  basic-check.yml  ci.yml  codeql.yml  frontend.yml  tests.yml
BitPolito-Academy-UI/: academy.html
BitPolito-Academy-UI/src/: app2.jsx  atoms.jsx  data.jsx  screens-courses.jsx  screens-study2.jsx  screens-workspace.jsx
api/: Dockerfile  main.py
apps/: .gitignore
apps/web/: .env.example  .eslintrc.json  README.md  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/config/: README.md
apps/web/coverage/: clover.xml  coverage-final.json  lcov.info
apps/web/src/: globals.d.ts  middleware.ts
frontend/: Dockerfile
services/: .gitignore
services/ai/: .env.example  README.md  package.json  py.typed  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh
services/ai/app/: __init__.py  api_deps.py  main.py
services/ai/app/api/: __init__.py  auth_api.py  certificates_api.py  chat_api.py  courses_api.py  debug_api.py  documents_api.py  progress_api.py  quizzes_api.py  study_api.py
services/ai/app/core/: __init__.py  config.py  container.py  errors.py  rate_limit.py  token_blacklist.py  uow.py
services/ai/app/db/: init_db.py  models.py  session.py
services/ai/app/middleware/: __init__.py  audit.py  auth.py  security.py
services/ai/app/rag/: __init__.py  chains.py  normalizer.py  prompts.py  retrievers.py
services/ai/app/repositories/: __init__.py  badge_repo.py  certificate_repo.py  course_repo.py  document_repo.py  lesson_repo.py  progress_repo.py  quiz_repo.py  user_repo.py
services/ai/app/schemas/: __init__.py  auth_schemas.py  certificate_schemas.py  course_schemas.py  document_schemas.py  evidence_pack.py  normalized_document.py  progress_schemas.py  quiz_schemas.py  study_schemas.py
services/ai/app/services/: auth_service.py  certificate_service.py  chat_service.py  chroma_retrieval.py  course_service.py  document_service.py  evidence_pack_service.py  progress_service.py  quiz_service.py  retrieval_service.py  study_service.py
services/ai/app/workers/: pipeline.py
services/ai/config/: README.md  mypy.ini  pytest.ini  setup.cfg
services/ai/docs/: STRUCTURE.md
services/ai/tests/: __init__.py  conftest.py
services/ai/tests/integration/: test_api.py  test_auth_api.py  test_chat_api.py  test_documents_api.py  test_pipeline_e2e.py  test_progress_api.py  test_quizzes_certificates_api.py  test_study_api.py  test_wiring.py
services/ai/tests/unit/: test_auth_middleware.py  test_chunker.py  test_health.py  test_ingester_parser.py  test_jwt.py  test_normalized_document.py  test_normalizer.py  test_pipeline_schema.py  test_progress_service.py  test_qvac_pipeline.py  test_sys_modules_alias.py
workers/: main.py  requirements.txt
workers/python-ingester/: R-03_Benchmark_Report.md
workers/qvac-service/: Dockerfile  package.json
(+139 files in other folders)
